--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,4 +1,5 @@
 {
     "Главная страница": "Главная страница",
-    "Язык": "Русский"
+    "Язык": "Русский",
+    "Переключение": "Переключение"
 }
