--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,9 @@
 {
     "Главная страница": "Главная страница",
     "Язык": "Русский",
-    "Переключение": "Переключение"
+    "Переключение": "Toggle",
+    "Страница не найдена": "Страница не найдена",
+    "Призошла непредвиденная ошибка": "Призошла непредвиденная ошибка",
+    "Обновить страницу": "Обновить страницу",
+    "throw error": "throw error"
 }
