--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,5 +5,7 @@
     "Страница не найдена": "Page not found",
     "Призошла непредвиденная ошибка": "Something wrong",
     "Обновить страницу": "Reload page",
-    "throw error": "throw error"
+    "throw error": "throw error",
+    "Главная":  "Main",
+    "О сайте": "About"
 }
