--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -5,5 +5,7 @@
     "Страница не найдена": "Страница не найдена",
     "Призошла непредвиденная ошибка": "Призошла непредвиденная ошибка",
     "Обновить страницу": "Обновить страницу",
-    "throw error": "throw error"
+    "throw error": "throw error",
+    "Главная":  "Главная",
+    "О сайте": "О сайте"
 }
