--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,5 +7,6 @@
     "Обновить страницу": "Reload page",
     "throw error": "throw error",
     "Главная":  "Main",
-    "О сайте": "About"
+    "О сайте": "About",
+    "Короткий язык": "En"
 }
