add portal, modal

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -8,5 +8,6 @@
     "throw error": "throw error",
     "Главная":  "Main",
     "О сайте": "About",
-    "Короткий язык": "En"
+    "Короткий язык": "En",
+    "Войти": "Login"
 }
