--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -8,5 +8,6 @@
     "throw error": "throw error",
     "Главная":  "Главная",
     "О сайте": "О сайте",
-    "Короткий язык": "Ru"
+    "Короткий язык": "Ru",
+    "Войти": "Войти"
 }
