--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -9,5 +9,7 @@
     "Главная":  "Main",
     "О сайте": "About",
     "Короткий язык": "En",
-    "Войти": "Login"
+    "Войти": "Login",
+    "Введите имя": "Enter name",
+    "Введите пароль": "Enter password"
 }
