--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -9,5 +9,7 @@
     "Главная":  "Главная",
     "О сайте": "О сайте",
     "Короткий язык": "Ru",
-    "Войти": "Войти"
+    "Войти": "Войти",
+    "Введите имя": "Введите имя",
+    "Введите пароль": "Введите пароль"
 }
