--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -11,5 +11,8 @@
     "Короткий язык": "Ru",
     "Войти": "Войти",
     "Введите имя": "Введите имя",
-    "Введите пароль": "Введите пароль"
+    "Введите пароль": "Введите пароль",
+    "Форма авторизации": "Форма авторизации",
+    "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль",
+    "Выйти": "Выйти"
 }
